Bug 145056 - UI Turning autofilter OFF and ON again retains the color filter setting
Summary: UI Turning autofilter OFF and ON again retains the color filter setting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium minor
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: implementationError
Depends on:
Blocks: AutoFilter-Color
  Show dependency treegraph
 
Reported: 2021-10-11 06:44 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-06 14:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc (8.65 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-10-11 06:44 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the original document in Calc (51.35 KB, image/png)
2021-10-11 06:44 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the problem in the Standard Filter dialog (40.48 KB, image/png)
2021-10-11 06:44 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the problem in the Autofilter dropdown (27.31 KB, image/png)
2021-10-11 06:45 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2021-10-11 06:44:01 UTC
Created attachment 175634 [details]
Example file from Calc

When color filtering is enabled on a sheet, turning OFF and ON again the autofilter seemingly retains the filter condition.

Steps to reproduce:
    1. Open attached file, it has an autofilter on column B set to green background color.
    2. Turn OFF the autofilter, this will show the pink background rows as well.
    3. Turn ON the autofilter.

Actual results:
The autofilters Background color list shows the green item highlighted.

Expected results:
Turning off the autofilter should lose the previous settings.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b1488cd6f008049a9aaff7350deeb73cbbd535b6
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: hu-HU (en_US); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2021-10-11 06:44:27 UTC
Created attachment 175635 [details]
Screenshot of the original document in Calc
Comment 2 Gabor Kelemen (Collabora) 2021-10-11 06:44:48 UTC
Created attachment 175636 [details]
Screenshot of the problem in the Standard Filter dialog
Comment 3 Gabor Kelemen (Collabora) 2021-10-11 06:45:06 UTC
Created attachment 175637 [details]
Screenshot of the problem in the Autofilter dropdown
Comment 4 Samuel Mehrbrodt 2021-12-06 16:02:42 UTC
Not reproducible in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: fd11f019e8b7253131bdb09f8023f15cd6525bf8
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: CL
Comment 5 Gabor Kelemen (Collabora) 2021-12-07 10:45:15 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #4)
> Not reproducible in
> 
> Version: 7.4.0.0.alpha0+ / LibreOffice Community
> Build ID: fd11f019e8b7253131bdb09f8023f15cd6525bf8
> CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
> Locale: de-DE (de_DE.UTF-8); UI: de-DE
> Calc: CL

Clarification: you need to turn it off by placing the highlight in the filtered range in column B and press the toolbar icon (or Data - Autofilter) to turn it on and off. 
After that the pink background cells are also visible (there is no filtering) but the clicking on the dropdown -> Background color still shows the green color checked.

Version: 7.3.0.0.beta1+ / LibreOffice Community
Build ID: 81b26582ed62db40e2be701ddefede7d8230d0d2
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

(linux-bibisect from 9 days ago)
Comment 6 Buovjaga 2023-02-15 14:13:16 UTC
(In reply to Gabor Kelemen (allotropia) from comment #5)
> Clarification: you need to turn it off by placing the highlight in the
> filtered range in column B and press the toolbar icon (or Data - Autofilter)
> to turn it on and off. 
> After that the pink background cells are also visible (there is no
> filtering) but the clicking on the dropdown -> Background color still shows
> the green color checked.

Reproduced.

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9ee1b714c13db308c199172ffa0199405ca3d9c3
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 14 February 2023
Comment 7 Commit Notification 2025-02-03 19:04:51 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/85f3a41d6909b4d8adb10012289e64dea88d12d1

tdf#145056 Delete autofilter settings when turning off autofilter

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-02-06 14:20:53 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/492c0973b4b53a419061d6d04f787d04ec50517d

tdf#145056 Delete autofilter settings when turning off autofilter

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.