tdf#145056 Delete autofilter settings when turning off autofilter

Otherwise when turning autofilter back on, colors will still be selected
in the dropdown (while the filter is not active)

Change-Id: I2bfeed08b187b3923e001d3b71658d5dc47556f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181053
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Tested-by: Jenkins